--- a/feed.yaml
+++ b/feed.yaml
@@ -4,6 +4,7 @@ author: Ray Villalobos
 description: Conversations with leaders building next generation techology tools.
 image: /images/artwork.jpg
 language: en-us
+link: https://khan7t7.github.io/github-test
 category: Technology
 format: audio/mpeg
 item:
